Исправленна ошибка в функции copyFile() - переставлены местами переменные userConfigFile и commonConfigFile. А также добавлена перезагрузка  Netbeans с изменениями формы и файлов свойств.

--- a/src/com/petriaiev/langchooser/Bundle_zh_CN.properties
+++ b/src/com/petriaiev/langchooser/Bundle_zh_CN.properties
@@ -11,4 +11,4 @@ LC_userConfFileCreateError=\u7528\u6237\u914d\u7f6e\u6587\u4ef6\u521b\u5efa\u951
 LC_langApplyError=\u8bed\u8a00\u8fd0\u7528\u9519\u8bef
 LanguageChooserTopComponent.saveButton.text=\u4fdd\u5b58
 LanguageChooserTopComponent.warningLabel.text=NetBeans \u5e94\u91cd\u65b0\u7533\u8bf7\u9009\u62e9\u7684\u8bed\u8a00
-LanguageChooserTopComponent.needShutDown.text=\u5173\u95ed NetBeans \u4fdd\u5b58\u540e
+LanguageChooserTopComponent.needRestart.text=\u5237\u65b0\u540e\u4fdd\u5b58\u7684NetBeans
