--- a/src/com/petriaiev/langchooser/Bundle_ja.properties
+++ b/src/com/petriaiev/langchooser/Bundle_ja.properties
@@ -11,4 +11,4 @@ LC_userConfFileCreateError=\u30e6\u30fc\u30b6\u30fc\u69cb\u6210\u30d5\u30a1\u30a
 LC_langApplyError=\u8a00\u8a9e\u306e\u9069\u7528\u6642\u306b\u30a8\u30e9\u30fc
 LanguageChooserTopComponent.saveButton.text=\u4fdd\u5b58
 LanguageChooserTopComponent.warningLabel.text=NetBeans \u9078\u629e\u3057\u305f\u8a00\u8a9e\u3092\u9069\u7528\u3059\u308b\u305f\u3081\u306b\u518d\u8d77\u52d5\u3059\u308b\u5fc5\u8981\u304c\u3042\u308a\u307e\u3059
-LanguageChooserTopComponent.needShutDown.text=\u30b7\u30e3\u30c3\u30c8\u30c0\u30a6\u30f3 NetBeans \u4fdd\u5b58\u3057\u305f\u5f8c\u3001
+LanguageChooserTopComponent.needRestart.text=\u4fdd\u5b58\u5f8c\u306eNetBeans\u3092\u30ea\u30ed\u30fc\u30c9
