--- a/src/com/petriaiev/langchooser/Bundle_pt_BR.properties
+++ b/src/com/petriaiev/langchooser/Bundle_pt_BR.properties
@@ -11,4 +11,4 @@ LC_userConfFileCreateError=Usu\u00e1rio configura\u00e7\u00e3o de erro de cria\u
 LC_langApplyError=Erro linguagem aplicando
 LanguageChooserTopComponent.saveButton.text=Salvar
 LanguageChooserTopComponent.warningLabel.text=NetBeans deve ser reiniciado para aplicar idioma selecionado
-LanguageChooserTopComponent.needShutDown.text=Encerre NetBeans depois de salvar
+LanguageChooserTopComponent.needRestart.text=Reiniciar NetBeans depois de salvar
